<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_">New</string> <!-- "new" is reserved -->
    <string name="select">Select</string>
...
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
...
    <string name="tap_to_create_new_note">Tap to create a new note</string>
    <string name="options_menu_item_search">Search</string>

    <string name="no_user_repos_configured_pref_summary">None configured yet</string>
    <string name="repos_options_menu_new_repo">New Repository</string>
    <string name="book_name_already_exists">Notebook %s already exists</string>
    <string name="filter_name_already_exists">Search with the same name already exists</string>
    <string name="failed_creating_directory">Failed creating directory %s</string>
    <string name="version">What\'s new</string>
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
    <string name="clear_database_summary">Clear local database</string>
...
    <string name="reload_getting_started">Import “Getting Started with Orgzly”</string>
    <string name="reload_getting_started_summary">Import the latest version of the notebook</string>
    <string name="notebook_imported">Notebook imported</string>

    <string name="book_does_not_exist_anymore">This notebook does not exist any more.</string>
    <string name="note_does_not_exist_anymore">This note does not exist any more.</string>
    <string name="search_does_not_exist_anymore">This search does not exist any more.</string>

    <string name="fragment_query_title">Search</string>
    <string name="repo_dropbox_button_not_linked">Link to Dropbox</string>
    <string name="repo_dropbox_button_linked">Unlink from Dropbox</string>
    <string name="fragment_settings_title">Settings</string>

...
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="new_search">New Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>

...

    <string name="preface_in_book">Notebook\'s preface</string>
    <string name="preface_in_book_full">Display</string>
    <string name="preface_in_book_hide">Hide</string>
    <string name="preface_in_book_few_lines">Display few lines</string>

    <string name="created_property_name">CREATED</string>

    <string name="separate_notes_with_new_line_always">Always</string>
    <string name="separate_notes_with_new_line_multi_line_notes_only">Multiline notes only</string>
    <string name="separate_notes_with_new_line_never">Never</string>

    <string name="default_notebook">Default notebook</string>
...
