<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search_view"
        android:title="@string/options_menu_item_search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/keep_screen_on"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/keep_screen_on"/>

    <item
        android:id="@+id/sync"
        app:showAsAction="never"
        android:title="@string/sync"/>

    <item
        android:id="@+id/activity_action_settings"
        app:showAsAction="never"
        android:title="@string/settings"/>
</menu>
