<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CoordinatorLayoutFitsSystemWindows">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/padding_bottom_for_fab"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <!-- Top toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayoutStyle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            style="@style/TopToolbar"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/Fab.Done" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
