...
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <com.orgzly.android.ui.views.TextViewWithMarkup
        android:id="@+id/item_head_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="?attr/text_primary_color"
        android:textSize="?attr/item_head_title_text_size"
...
