<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Content -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
...
            tools:ignore="MergeRootFrame" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_navigation_view"
        android:theme="@style/DrawerNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer">

...
